--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-scripts": "3.4.1",
-    "recharts": "^1.8.5",
-    "styled-components": "^5.1.0"
+    "recharts": "^1.8.5"
   },
   "scripts": {
     "dev:build-server": "NODE_ENV=development webpack --config webpack.server.js --mode=development -w",
