--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "recharts": "^1.8.5"
   },
   "scripts": {
-    "dev:build-server": "NODE_ENV=development webpack --config webpack.server.js --mode=development -w",
-    "dev:start": "nodemon ./server-build/index.js",
-    "server": "nodemon ./server/index.js",
-    "dev": "npm-run-all --parallel build dev:*",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "test": "jest"
+    "test": "jest",
+    "dev:build-server": "NODE_ENV=development webpack --config webpack.server.js --mode=development -w",
+    "dev:start": "nodemon ./server-build/index.js",
+    "server": "nodemon ./server/index.js ",
+    "dev": "npm-run-all --parallel build dev:*",
+    "firebase:build": "firebase deploy",
+    "firebase": "npm-run-all build firebase:build",
+    "both": "npm-run-all --parallel start server"
   },
   "jest": {
     "snapshotSerializers": [
